Overflow issue fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,8 @@
 
 body{
   font-family: "Inter", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
+
 }
 
 a{
